gccida/g2/convert_regs_2
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3256:4: error: expected ';' after expression
rtx end; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3256:5: error: use of undeclared identifier 'end'
rtx end; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3259:6: error: use of undeclared identifier 'v22'
rtx *v22; // rbp 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3264:6: error: use of undeclared identifier 'v27'
rtx *v27; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3288:13: error: expected ';' after expression
s = ( stack)v2->aux; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3397:16: error: use of undeclared identifier 'off_646752'
fprintf( file, off_646752, ( unsigned int)v17); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3405:1: error: use of undeclared identifier 'end'
end = v2->end; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3406:17: error: use of undeclared identifier 'end'
if ( *( _WORD *)end == 33 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3407:1: error: use of undeclared identifier 'end'
end = ( rtx)end[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3408:17: error: expected identifier or '('
 struct reg_set = regstack.reg_set; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3411:14: error: expected expression
v22 = ( rtx *)( FP_mode_reg + 120); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3411:1: error: use of undeclared identifier 'v22'
v22 = ( rtx *)( FP_mode_reg + 120); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3419:39: error: use of undeclared identifier 'v22'; did you mean 'v32'?
v24 = gen_rtx_fmt_ee( SET, VOIDmode, *v22, nan); 
                                      ^~~
                                      v32
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3269:14: note: 'v32' declared here
basic_block *v32; // rdi 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3420:1: error: use of undeclared identifier 'end'
end = emit_insn_after( v24, end); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3420:29: error: use of undeclared identifier 'end'
end = emit_insn_after( v24, end); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3421:19: error: use of undeclared identifier 'end'
subst_stack_regs( end, &regstack); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3422:17: error: expected identifier or '('
 struct reg_set = regstack.reg_set; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3426:1: error: use of undeclared identifier 'v22'
v22 += 59; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/reg-stack.c:3429:14: error: expected expression
if ( v23 !=  struct reg_set ) 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_regs_2/src/obj/reg-stack.o] Error 1
